# modal-fullstack-example

./: .coveragerc  .env.local  .gitignore  README.md  package-lock.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: test.yaml
app/: __init__.py  _modal.py  log.py  main.py
scripts/: format.sh  lint.sh  modal-deploy.sh  run-uvicorn.sh  test.sh
templates/: index.html
